# neuronunit

./: .backend_tests.py.swp  .gitignore  .gitmodules  .julia_run.jl.swo  .julia_run.jl.swp  .pyjul.py.swo  .pyjul.py.swp  .readthedocs.yml  .requirements.txt.swp  .travis.yml  .travis.yml.orig  .travis.yml.swn  .travis.yml.swo  .travis.yml.swp  1  CONTRIBUTING.md  Dockerfile  Dockerfile.orig  LEMS_Test_ca_boyle.xml  MANIFEST  README.md  README.md.orig  Test-NeuroMLDB-Abstract-Model.ipynb  Test-NeuroMLDB-MultiComp-Model.ipynb  __init__.py  after_thought.jl  aibs.py  allen_tests.py  analysis_on_three_feature_sets.ipynb  asv.conf.json  backend_tests.py  build.sh  buildspec.yml  candidates.py  capabilities.py  cellmodelp.py  current.jld  deap_config_simple_sum.py  depolarization_block_Bianchi.py  depolarization_block_Golding.py  (+58 more)
.circleci/: bu.yml  config.yml  new.yml  wrong.yml
.github/workflows/: pythonpackage.yml
benchmarks/: benchmarks.py
capabilities/: __init__.py  spike_functions.py
docker_new/: Dockerfile
docker_old/: Dockerfile
docs/: Chapter5.ipynb  Chapter555.ipynb  Makefile  big_model_evaulated.pickle  chapter1.ipynb  chapter1.py  chapter2.ipynb  chapter3.ipynb  chapter4.ipynb  chapter5.ipynb  chapter5.py  morphology.ipynb  nsga.py  rtfd-requirements.txt
docs/source/: conf.py  index.rst  modules.rst  neuronunit.capabilities.rst  neuronunit.models.backends.rst  neuronunit.models.rst  neuronunit.neuroconstruct.rst  neuronunit.optimization.rst  (+3 more)
examples/: simple_job.py
hippounit/: __init__.py  plottools.py
models/: __init__.py  generic_network.py  network_model.py  reduced.py
neuroconstruct/: __init__.py  candidates.py  capabilities.py  models.py
neuronunit/: Dockerfile  __init__.py  aibs.py  allen_supra_threshold_api.py  bbp.py  cellmodel.py  cellmodelp.py  deap_container.py  get_glif_stim.py  get_rheobase.py  make_allen_tests.py  mint_tests.ipynb  neuroelectro.py  neuromldb.py  nsga.py  nsga_parallel.py  plottools.py  plottools_bu.py  pts.py  pts_.py
nml/: jnml.py
optimisation/: algorithms.py  ascii_plot.py  model_parameters.py  optimisation_management.py
optimization/: model_parameters.py
profile_default/: history.sqlite
scratch/: Dockerfile  backend-pickle.ipynb  example_neuron_backend.ipynb  explorter_voyager.ipynb  ipyparallel.ipynb  ipyparallel_progress1.ipynb  nsga.py
singularity/: bash_process.sh
stale/: cellmodelp.py  query_db_tests.py
stimfeat/: PC_newfeat_No14112401_15012303-m990803_stimfeat.json
tests/: __init__.py  allen_tests.py  base.py  bi_modal_test.py  druckman2013.py  druckmann2013.py  fi.py  passive.py  use_bi_tests.py  waveform.py
unit_test/: __init__.py  __main__.py  all_tests.py  allen_data.py  base.py  bbp.ipynb  bfi.py  cache_edit.ipynb  cache_use.ipynb  core_tests.py  covariance_adaption_approach.py  doc_tests.py  exhaustive_search.py  experiment.py  get_snippet.py  get_tau.ipynb  get_tau.py  grid_entry_point.py  grid_vs_ga.py  grid_vs_ga_function.py  grid_vs_ga_h_constant.py  held_constant_grid.p  high_level_test.py  launch_tests.py  list_of_cells.py  low_level_test.py  misc_tests.py  model_tests.py  neuroconstruct_tests.py  neuroelectro-cache.dir  neuron_back_end_tests.py  nml_extra_capability_check.ipynb  observation_tests.py  openworm_tests.py  optimization_tests.py  pipe_tests.p  resource_tests.py  rtt.ipynb  run_ref_range.py  showcase_tests.py  (+16 more)
(+2445 files in other folders)
