[metadata]
name = neuronunit
version = 0.19
description = A SciUnit library for data-driven testing of single-neuron physiology models.
long_description_content_type = text/markdown
url = http://github.com/scidash/neuronunit

author = Rick Gerkin
author_email = rgerkin@asu.edu
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8


[options]
zip_safe = False
packages = find:
python_requires = >=3.5
install_requires =
  scipy>=0.17
  matplotlib>=2.0
  neo>=0.5.2
  elephant>=0.4.1
  igor>=0.3
  allensdk==0.16.3
  pyNeuroML >= 0.3.14
  pyNN>=0.9
  execnet
  sciunit @ git+https://github.com/scidash/sciunit@dev#egg=sciunit-9999
  requests
  validators
  lmfit
  numba
  dask[complete]
  deap 
  bluepyopt >= 1.1.241
  pylmeasure

[options.extras_require]
morphology = pylmeasure
