[metadata]
name = neuronunit
version = 0.19
description = A SciUnit library for data-driven testing of single-neuron physiology models.
long_description_content_type = text/markdown
url = http://github.com/russelljjarvis/neuronunit

author = Russell Jarvis
author_email = russelljarvis@protonmail.com
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8


[options]
zip_safe = False
packages = find:
python_requires = >=3.5
install_requires =
    dask
    lxml==4.4.1
    elephant==0.4.1
    mock==3.0.5
    tqdm==4.48.2
    neo==0.5.2
    plotly==4.5.2
    simplejson==3.17.0
    future==0.17.1
    streamlit
    pandas==1.1.0
    matplotlib
    seaborn
    quantities==0.12.4
    Jinja2==2.10.3
    Pebble==4.5.3
    backports.statistics==0.1.0
    python_dateutil
    scikit_learn==0.23.2
    frozendict==1.2
    neo==0.5.2
    numba
    tqdm==4.48.2
    allensdk==0.16.3
    natsort==7.0.1
    nbformat==4.4.0
    quantities==0.12.4
    dask[bag]
    fsspec>=0.3.3
    cython
    efel
    pyneuroml
    BluePyOpt @ git+ssh://git@github.com/russelljjarvis/BluePyOpt.git@neuronunit_reduced_cells

[options.extras_require]
morphology = pylmeasure
